--- a/.github/workflows/openwrt-24.10-build-toolchain-gcc13.yml
+++ b/.github/workflows/openwrt-24.10-build-toolchain-gcc13.yml
@@ -137,4 +137,4 @@ jobs:
         commit: openwrt-24.10
         replacesArtifacts: true
         token: ${{ secrets.GITHUB_TOKEN }}
-        artifacts: $OPENWRT_PATH/toolchain-cache/*
+        artifacts: openwrt/toolchain-cache/*
